# triality

./: .dockerignore  .env.example  .gitignore  ATTRIBUTION.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  TRADEMARKS.md  docker-compose.yml  setup.sh
docs/: BUSINESS.md  FIDELITY_COUPLING_AUDIT.md  IR_SPEC.md  MODULE_EXECUTION_DEPTH_REPORT.md  PHYSICS_MANIFESTO.md  PHYSIM_REFERENCE.md  RUNTIME_SDK.md  SENSING_MODULE_SPEC.md  api_reference.md  architecture.md  changelog.md  contributing.md  examples.md  getting_started.md  index.md  lib_readme.md  modules.md  physics_guide.md  rust_backend.md  testing.md  whitepaper.md
frontend/: README.md  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
lib/: setup.py
lib/triality/: __init__.py  comprehensive_test.py  generate_fidelity_coupling_audit.py  generate_module_execution_depth_report.py  observables.py  run_tests.sh  runtime.py  runtime_graph.py  runtime_templates.py  test_all_features.py  test_drift_diffusion.py  test_electrostatics.py  test_field_aware_routing.py  test_output.txt  test_runtime_sdk.py  test_spatial_flow_comprehensive.py
lib/triality/triality_engine/: Cargo.toml  pyproject.toml
lib/triality/triality_engine/src/: elements.rs  fdm.rs  fem_assembly.rs  fem_bc.rs  gmsh_io.rs  grid.rs  lib.rs  mesh.rs  precond.rs  python_bindings.rs  solvers.rs  sparse.rs  timestepper.rs  vtk_export.rs
triality_app/: README.md  __init__.py  goal_engine.py  main.py  physics_truth.py  semantic_physics.py  task_decomposer.py
(+217 files in other folders)
