[package]
name = "triality_engine"
version = "0.1.0"
edition = "2021"
description = "High-performance numerical backbone for Triality"
license = "MIT"

[lib]
name = "triality_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
ndarray = { version = "0.16", features = ["rayon"] }
rayon = "1.10"
num-traits = "0.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
